--- a/Modules/MobileManager/Views/Common/ViewAuditLog.xaml
+++ b/Modules/MobileManager/Views/Common/ViewAuditLog.xaml
@@ -5,7 +5,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:prism="http://prismlibrary.com/"
-             xmlns:mm="clr-namespace:Gijima.IOBM.MobileManager.Common;assembly=Gijima.IOBM.MobileManager.Common"            
+             xmlns:mm="clr-namespace:Gijima.IOBM.MobileManager.Common;assembly=Gijima.IOBM.MobileManager"            
              prism:ViewModelLocator.AutoWireViewModel="True"             
              mc:Ignorable="d" 
              d:DesignHeight="200" d:DesignWidth="1000">
