--- a/Modules/MobileManager/Views/Administration/ViewCellular.xaml
+++ b/Modules/MobileManager/Views/Administration/ViewCellular.xaml
@@ -312,22 +312,18 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <!--<ComboBox x:Name="ComboBoxContractService" Grid.Column="0" ToolTip="Select the contract services." TabIndex="27" IsSynchronizedWithCurrentItem="True" Height="20"
-                            ItemsSource="{Binding ContractServiceCollection}" DisplayMemberPath="ServiceDescription" 
-                            SelectedItem="{Binding SelectedContractService, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" BorderBrush="{Binding RequiredFieldColour}" >
-                        </ComboBox>-->
-                        <ComboBox x:Name="ComboBoxContractService"  Grid.Column="0" IsEditable="True" IsReadOnly="True" ItemsSource="{Binding ContractServiceCollection}" Text="{Binding ContractServiceCollection}"
-                                  ToolTip="Select the contract services." TabIndex="27">
+                        <ComboBox x:Name="ComboBoxContractService"  Grid.Column="0" IsEditable="True" IsReadOnly="True" ItemsSource="{Binding ContractServiceCollection}" 
+                            ToolTip="Select the contract services." TabIndex="27">
                             <ComboBox.ItemTemplate>
                                 <DataTemplate>
                                     <StackPanel Orientation="Horizontal">
-                                        <CheckBox Content="{Binding ContractServiceCollection}" IsChecked="{Binding IsSelected}" Width="20" VerticalAlignment="Center"/>
-                                        <TextBlock Text="{Binding ContractServiceCollection}" VerticalAlignment="Center" />
+                                        <CheckBox IsChecked="{Binding IsSelected}" />
+                                        <TextBlock Text="{Binding ServiceDescription}" />
                                     </StackPanel>
                                 </DataTemplate>
                             </ComboBox.ItemTemplate>
                         </ComboBox>
-                        <Button x:Name="ButtonContractSeviceCrud" Grid.Column="1" Margin="2,0,0,0" ToolTip="Add, edit or delete contract service." TabIndex="28" Height="20"
+                        <Button x:Name="ButtonContractSeviceCrud" Grid.Column="1" Margin="2,0,0,0" ToolTip="Add, edit or delete contract service." TabIndex="28" Height="22"
                             Style="{StaticResource UXImageButtonStyle}" Command="{Binding ContractServiceCommand}">
                             <Image Source="/Gijima.IOBM.MobileManager;component/Assets/Images/edit_32.png" />
                         </Button>
