--- a/Modules/MobileManager/Views/Administration/ViewCellular.xaml
+++ b/Modules/MobileManager/Views/Administration/ViewCellular.xaml
@@ -317,7 +317,7 @@
                             <ComboBox.ItemTemplate>
                                 <DataTemplate>
                                     <StackPanel Orientation="Horizontal">
-                                        <CheckBox IsChecked="{Binding IsSelected}" />
+                                        <CheckBox IsChecked="{Binding IsSelected}" Margin="0,0,5,0" Visibility="{Binding pkContractServiceID, Converter={StaticResource UIDataConvertionHelper}, ConverterParameter='ContractServiceID'}" />
                                         <TextBlock Text="{Binding ServiceDescription}" />
                                     </StackPanel>
                                 </DataTemplate>
