--- a/Modules/MobileManager/Views/Administration/ViewDevice.xaml
+++ b/Modules/MobileManager/Views/Administration/ViewDevice.xaml
@@ -1,4 +1,5 @@
 ﻿<UserControl x:Class="Gijima.IOBM.MobileManager.Views.ViewDevice"
+             xmlns:WPF="clr-namespace:Gijima.Controls.WPF;assembly=Gijima.Controls.WPF"
              xmlns:local="clr-namespace:Gijima.IOBM.MobileManager.Views"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -142,17 +143,9 @@
                         IsChecked="{Binding DeviceInsuranceNo, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" BorderBrush="{Binding ValidInsurance}"/>
                 </StackPanel>
                 <TextBlock Grid.Row="2" Grid.Column="3" Text="Sim crd:" Style="{StaticResource UXLabelTextStyle}"></TextBlock>
-                <ComboBox x:Name="ComboBoxContractService" Grid.Row="2" Grid.Column="4" IsEditable="True" IsReadOnly="True" ToolTip="Select the sim cards linked to the device." TabIndex="66"
-                            ItemsSource="{Binding SimCardCollection}"  Text="{Binding SelectedSimCardCellNumber, UpdateSourceTrigger=PropertyChanged}"  SelectedItem="{Binding SelectedSimCardCellNumber, UpdateSourceTrigger=PropertyChanged}">
-                    <ComboBox.ItemTemplate>
-                        <DataTemplate >
-                            <StackPanel Orientation="Horizontal">
-                                <CheckBox IsChecked="{Binding IsSelected, UpdateSourceTrigger=PropertyChanged}" Margin="0,0,5,0" Visibility="{Binding pkDeviceSimCardID, Converter={StaticResource UIDataConvertionHelper}, ConverterParameter='DeviceSimCardID'}" />
-                                <TextBlock Text="{Binding CellNumber, UpdateSourceTrigger=PropertyChanged}" />
-                            </StackPanel>
-                        </DataTemplate>
-                    </ComboBox.ItemTemplate>
-                </ComboBox>
+                <WPF:MultiSelectComboBoxUX x:Name="ComboboxSimCard" Grid.Row="2" Grid.Column="4" ToolTip="Select the contract services." TabIndex="27" Height="22"
+                            DefaultText="-- Please Select --" ItemsSource="{Binding DeviceSimCardCollection, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" SelectedItems="{Binding SelectedDeviceSimCardCollection, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                </WPF:MultiSelectComboBoxUX>
                 <TextBlock Grid.Row="8" Grid.Column="0" Text="Insr value:" Style="{StaticResource UXLabelTextStyle}"></TextBlock>
                 <TextBox x:Name="TextBoxInsuranceValue" Grid.Row="8" Grid.Column="1" TabIndex="72" ToolTip="Enter the insurance value." Style="{StaticResource UXTextBoxStyle}"
                     IsEnabled="{Binding DeviceInsuranceYes}" Text="{Binding SelectedInsuranceValue, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" BorderBrush="{Binding ValidInsuranceValue}">
