--- a/Modules/MobileManager/Views/Maintenance/ViewCompanyGroup.xaml
+++ b/Modules/MobileManager/Views/Maintenance/ViewCompanyGroup.xaml
@@ -50,8 +50,8 @@
             </Button>
         </StackPanel>
         <TextBlock Grid.Row="2" Grid.Column="0" Text="Billing levels:" Style="{StaticResource UXLabelTextStyle}" VerticalAlignment="Top"></TextBlock>
-        <ListBox x:Name="ListBoxBillingLevels" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" TabIndex="8" Height="100" VerticalAlignment="Top"
-            ItemsSource="{Binding CompanyBillingLevelCollection, UpdateSourceTrigger=PropertyChanged}" MinHeight="38" MaxHeight="50"/>
+        <ListBox x:Name="ListBoxBillingLevels" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" TabIndex="8" Height="38" VerticalAlignment="Top"
+            ItemsSource="{Binding CompanyBillingLevelCollection, UpdateSourceTrigger=PropertyChanged}" DisplayMemberPath="BillingLevelDescription"/>
         <StackPanel Grid.Row="3" Grid.Column="3" Orientation="Horizontal" HorizontalAlignment="Right">
             <TextBlock Text="Active" Style="{StaticResource UXLabelTextStyle}" VerticalAlignment="Bottom" Margin="0,0,5,0"></TextBlock>
             <CheckBox x:Name="CkeckBoxIsActive" TabIndex="2" VerticalAlignment="Bottom" IsChecked="{Binding GroupState, UpdateSourceTrigger=PropertyChanged}"/>
