--- a/Modules/MobileManager/Views/Configuration/ViewDataValidationCF.xaml
+++ b/Modules/MobileManager/Views/Configuration/ViewDataValidationCF.xaml
@@ -158,7 +158,7 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Header="Validation Value" Binding="{Binding DataValidationValue}" Width="Auto" />
+                <DataGridTextColumn Header="Validation Value" Binding="{Binding DataValidationValue}" Width="300" />
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
